k8s/iris-runner-pod-manager.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iris-runner-pod-manager
  labels:
    app: iris-runner-pod-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iris-runner-pod-manager
  template:
    metadata:
      labels:
        app: iris-runner-pod-manager
    spec:
      serviceAccountName: pod-manager
      containers:
      - name: iris-runner-pod-manager
        image: ghcr.io/skkuding/iris-runner-pod-manager:$TIMESTAMP
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "0.5"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: iris-runner-pod-manager
spec:
  selector:
    app: iris-runner-pod-manager
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
  sessionAffinity: ClientIP
