k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iris-runner
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01" # 학교 네트워크 특성상(HTTP-01을 위한 80번 포트 사용 불가) DNS-01 사용
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600" # RUN 특성 고려하여 10분으로 조정
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30" # 원본 요청 정보 유지
    nginx.ingress.kubernetes.io/server-snippets: |
      location /run {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header Connection "upgrade";
        
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;

        proxy_cache_bypass $http_upgrade;
      }
    
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - run.codedang.com
      secretName: run-codedang-tls
  rules:
    - host: run.codedang.com
      http:
        paths:
          - path: /run
            pathType: Exact
            backend:
              service:
                name: iris-runner-pod-manager
                port:
                  number: 80
